feat: Implementar métodos de PlantaRepositorioImpl
- Implementar obtenerPorId, listarPorUsuario, guardar
- Implementar eliminar, buscarPorNombre, actualizarEstado
- Implementar buscarPorTipo, contarPorUsuario
- Agregar manejo de errores y logging
- Crear PlantaDocumentoMapper para conversiones

fix #8